name:                blockchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/angiolep/blockchain#readme
license:             BSD3
license-file:        LICENSE
author:              Paolo Angioletti
maintainer:          paolo.angioletti@gmail.com
copyright:           2017 BitSpoke Ltd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cryptography.Cipher
                     , Cryptography.Cipher.Substitution
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable blockchain-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockchain
  default-language:    Haskell2010

test-suite blockchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec 
                     , blockchain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/angiolep/blockchain
